tests/ui/typeck/typeck-default-trait-impl-negation-send.stderr
error[E0277]: `MyNotSendable` cannot be sent between threads safely
  --> $DIR/typeck-default-trait-impl-negation-send.rs:19:15
   |
LL |     is_send::<MyNotSendable>();
   |               ^^^^^^^^^^^^^ `MyNotSendable` cannot be sent between threads safely
   |
help: the trait `Send` is not implemented for `MyNotSendable`
  --> $DIR/typeck-default-trait-impl-negation-send.rs:9:1
   |
LL | struct MyNotSendable {
   | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `is_send`
  --> $DIR/typeck-default-trait-impl-negation-send.rs:15:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
